# FindFour

./: .gitignore  AUTHORS  Makefile.am  configure.ac
data/: Makefile.am
data/desktop/: findfour.desktop
etc/: Info.plist.in  Makefile.am  findfour.icns
po/: POTFILES.in  es.po  findfour.pot
src/: Makefile.am  background.c  background.h  chat.c  chat.h  cp-button.c  cp-button.h  draw-text.c  draw-text.h  findfour.c  findfour.h  findfour.rc  inputbox.c  inputbox.h  juego.c  juego.h  message.c  message.h  netplay.c  netplay.h  resolv.c  resolv.h  sdl2_rect.c  sdl2_rect.h  stun.c  stun.h  test-send.c  utf8.c  utf8.h  ventana.c  ventana.h
