gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/lodge.png \
	images/lodge_fire.png \
	images/lodge_candle.png \
	images/ventana.png \
	images/tablero.png \
	images/coinblue.png \
	images/coinred.png \
	images/bigcoinred.png \
	images/bigcoinblue.png \
	images/button-up.png \
	images/button-over.png \
	images/button-down.png \
	images/button-arrow-1-down.png \
	images/button-arrow-1-over.png \
	images/button-arrow-1-up.png \
	images/button-arrow-2-down.png \
	images/button-arrow-2-over.png \
	images/button-arrow-2-up.png \
	images/button-list-down.png \
	images/button-list-over.png \
	images/button-list-up.png \
	images/shadow-down.png \
	images/shadow-over.png \
	images/shadow-up.png \
	images/ventana-chat.png \
	images/loading.png \
	images/list-mini.png \
	images/list-big.png \
	images/win-1.png \
	images/win-2.png \
	images/win-3.png \
	images/win-4.png \
	images/window.png \
	images/tab.png \
	images/inputbox.png \
	images/chat.png \
	ccfacefront.ttf \
	burbankbm.ttf \
	comicrazy.ttf

